--- a/src/app/modules/admin/assets/details/pc/pc-modal-create/pc-modal-create.component.html
+++ b/src/app/modules/admin/assets/details/pc/pc-modal-create/pc-modal-create.component.html
@@ -61,7 +61,7 @@
                     <mat-icon
                         class="icon-size-5"
                         matPrefix
-                        [svgIcon]="'mat_solid:face'"
+                        [svgIcon]="'mat_solid:computer'"
                     ></mat-icon>
                 </mat-form-field>
                 <mat-form-field class="flex-auto">
@@ -87,7 +87,7 @@
                     <mat-icon
                         class="icon-size-5"
                         matPrefix
-                        [svgIcon]="'mat_solid:local_phone'"
+                        [svgIcon]="'mat_solid:info'"
                     ></mat-icon>
                 </mat-form-field>
                 
@@ -155,7 +155,7 @@
                     <mat-icon
                         class="icon-size-5"
                         matPrefix
-                        [svgIcon]="'mat_solid:location_on'"
+                        [svgIcon]="'mat_solid:info'"
                     ></mat-icon>
                 </mat-form-field>
             </div>
@@ -170,7 +170,7 @@
                     <mat-icon
                         class="icon-size-5"
                         matPrefix
-                        [svgIcon]="'mat_solid:location_on'"
+                        [svgIcon]="'mat_solid:info'"
                     ></mat-icon>
                 </mat-form-field>
             </div>
@@ -233,7 +233,7 @@
                         <mat-icon
                             class="icon-size-5"
                             matPrefix
-                            [svgIcon]="'mat_solid:location_on'"
+                            [svgIcon]="'mat_solid:info'"
                         ></mat-icon>
                     </mat-form-field>
                 </div>
@@ -251,7 +251,7 @@
                             <mat-icon
                                 class="icon-size-5"
                                 matPrefix
-                                [svgIcon]="'mat_solid:location_on'"
+                                [svgIcon]="'mat_solid:info'"
                             ></mat-icon>
                         </mat-form-field>
              
@@ -267,7 +267,7 @@
                             <mat-icon
                                 class="icon-size-5"
                                 matPrefix
-                                [svgIcon]="'mat_solid:location_on'"
+                                [svgIcon]="'mat_solid:info'"
                             ></mat-icon>
                         </mat-form-field>
              
@@ -283,7 +283,7 @@
                             <mat-icon
                                 class="icon-size-5"
                                 matPrefix
-                                [svgIcon]="'mat_solid:location_on'"
+                                [svgIcon]="'mat_solid:info'"
                             ></mat-icon>
                         </mat-form-field>
              
