--- a/src/app/modules/admin/assets/details/peripherals/peripheral-modal-create/peripheral-modal-create.component.html
+++ b/src/app/modules/admin/assets/details/peripherals/peripheral-modal-create/peripheral-modal-create.component.html
@@ -78,7 +78,7 @@
                         [svgIcon]="'mat_solid:laptop'"
                     ></mat-icon>
                 </mat-form-field>
-                <mat-form-field class="flex-auto">
+                <!-- <mat-form-field class="flex-auto">
                     <input
                         matInput
                         [formControlName]="'li_description'"
@@ -91,7 +91,7 @@
                         [svgIcon]="'mat_solid:info'"
                     ></mat-icon>
                     <span matPrefix>LI DESC</span>
-                </mat-form-field>
+                </mat-form-field> -->
             </div>
             <div class="flex justify-end">
                 <button
