--- a/src/app/modules/admin/assets/details/peripherals/peripherals-details/peripherals-details.component.html
+++ b/src/app/modules/admin/assets/details/peripherals/peripherals-details/peripherals-details.component.html
@@ -1,4 +1,4 @@
-<app-side-panel-peripherals #sidePanel>
+<app-side-panel-peripherals #sidePanel (updateSuccess)="loadItots()">
     <div class="flex flex-col flex-auto min-w-0">
         <!-- Header -->
         <div
@@ -123,7 +123,7 @@
                             *matCellDef="let element"
                             class="border-b border-gray-200 text-sm px-4 py-2"
                         >
-                            {{ element.date_acquired }}
+                        {{ element.date_acquired | date:'MM/dd/yyyy' }}
                         </td>
                     </ng-container>
 
