--- a/src/app/modules/admin/assets/cards/pc/pc-card/pc-card.component.html
+++ b/src/app/modules/admin/assets/cards/pc/pc-card/pc-card.component.html
@@ -248,7 +248,7 @@
                                 <span>View</span>
                             </button>
 
-                            <button mat-menu-item disabled>
+                            <!-- <button mat-menu-item>
                                 <mat-icon
                                     class="icon-size-4 mr-4"
                                     svgIcon="feather:edit"
@@ -261,7 +261,7 @@
                                     svgIcon="feather:delete"
                                 ></mat-icon>
                                 <span>Delete</span>
-                            </button>
+                            </button> -->
                         </mat-menu>
                     </td>
                 </ng-container>
