--- a/src/app/modules/admin/assets/components/modal/modal-universal/modal-universal.component.html
+++ b/src/app/modules/admin/assets/components/modal/modal-universal/modal-universal.component.html
@@ -1,10 +1,10 @@
 <!-- modal-universal.component.html -->
-<h2 mat-dialog-title>Are you sure you want to continue?</h2>
-<mat-dialog-content>
+<h2 mat-dialog-title inert>Are you sure you want to continue?</h2>
+<mat-dialog-content inert>
     <p class="my-6">This action is irreversible,</p>
 </mat-dialog-content>
 <mat-dialog-actions class="justify-end">
-    <button mat-button (click)="onNoClick()">Cancel</button>
+    <button mat-button (click)="onNoClick()" >Cancel</button>
     <button
         mat-flat-button
         [color]="'primary'"
