--- a/src/app/modules/admin/assets/details/pc/pc-details/pc-details.component.html
+++ b/src/app/modules/admin/assets/details/pc/pc-details/pc-details.component.html
@@ -1,4 +1,4 @@
-<app-side-panel-pcs #sidePanel>
+<app-side-panel-pcs #sidePanel (updateSuccess)="loadItots()">
     <div class="flex flex-col flex-auto min-w-0">
         <!-- Header -->
         <div
@@ -120,7 +120,7 @@
                             *matCellDef="let element"
                             class="border-b border-gray-200 text-sm px-4 py-2"
                         >
-                            {{ element.date_acquired | date : "dd/MM/yyyy" }}
+                        {{ element.date_acquired | date:'MM/dd/yyyy' }}
                         </td>
                     </ng-container>
 
@@ -231,7 +231,7 @@
                             <button
                                 mat-icon-button
                                 [matMenuTriggerFor]="menu"
-                                aria-label="Example icon-button with a menu"
+                               
                             >
                                 <mat-icon>more_vert</mat-icon>
                             </button>
@@ -246,13 +246,16 @@
                                     ></mat-icon>
                                     <span>View</span>
                                 </button>
-                                <button mat-menu-item disabled>
-                                    <mat-icon
-                                        class="icon-size-4 mr-4"
-                                        svgIcon="feather:edit"
-                                    ></mat-icon>
-                                    <span>Edit</span>
-                                </button>
+                                <button
+                                mat-menu-item
+                                (click)="openEditSidePanel(element)"
+                            >
+                                <mat-icon
+                                    class="icon-size-4 mr-4"
+                                    svgIcon="feather:edit"
+                                ></mat-icon>
+                                <span>Edit</span>
+                            </button>
                                 <!-- <button mat-menu-item>
                                     <mat-icon
                                         class="icon-size-4 mr-4"
@@ -262,8 +265,7 @@
                                 </button> -->
                                 <button
                                 mat-menu-item
-                                (click)="deletePc(element.id)"
-                                aria-label="Delete Peripheral"
+                                (click)="deletePc(element.id)"                                
                                 role="menuitem"
                             >
                                 <mat-icon
@@ -289,7 +291,7 @@
                     [pageSizeOptions]="[10, 15, 20, 50, 100]"
                     [pageSize]="10"
                     showFirstLastButtons
-                    aria-label="Select page of Assets PC"
+                    
                 ></mat-paginator>
             </div>
         </div>
