--- a/src/app/modules/admin/assets/details/pc/side-panel-pcs/side-panel-pcs.component.html
+++ b/src/app/modules/admin/assets/details/pc/side-panel-pcs/side-panel-pcs.component.html
@@ -144,6 +144,334 @@
             </div>
         </div>
     </mat-sidenav>
+
+    <mat-sidenav #editSidenav mode="over" [(opened)]="isEditSidenavOpen">
+        <div class="p-4" *ngIf="editData">
+            <div class="flex items-center justify-end">
+                <button mat-icon-button (click)="closeEditSidenav()">
+                    <mat-icon [svgIcon]="'heroicons_outline:x'"></mat-icon>
+                </button>
+            </div>
+            <div class="aspect-w-6 aspect-h-4 mt-8">
+                <div
+                    class="flex items-center justify-center border rounded-lg bg-gray-50 dark:bg-card"
+                >
+                    <ng-container>
+                        <mat-icon
+                            class="icon-size-14 text-hint"
+                            [svgIcon]="'feather:file-text'"
+                        ></mat-icon>
+                    </ng-container>
+                </div>
+            </div>
+
+            <div class="flex flex-row items-start mt-8">
+                <div class="text-xl font-medium">
+                    {{ editData.asset_barcode }}
+                </div>
+                <!-- Always visible div without conditions -->
+                <div
+                    class="mt-1 ml-4 px-1.5 rounded text-sm font-semibold leading-5 text-white bg-indigo-600"
+                >
+                    File
+                </div>
+            </div>
+
+            <mat-divider class="m-6"></mat-divider>
+            <form [formGroup]="myForm" (ngSubmit)="onUpdate()">
+                <div class="text-lg font-medium mt-8">Edit Information</div>
+                <div
+                    class="flex flex-col mt-4 border-t border-b divide-y font-medium"
+                >
+                    <!-- Date Acquired -->
+                    <div class="flex items-center justify-between py-3">
+                        <div class="text-secondary field-label">
+                            Date Acquired
+                        </div>
+                        <mat-form-field appearance="fill" class="w-1/2">
+                            <input
+                                matInput
+                                [matDatepicker]="picker"
+                                [formControlName]="'date_acquired'"
+                                placeholder="Date Acquired"
+                                (click)="picker.open()"
+                                required
+                            />
+                            <mat-icon
+                                matPrefix
+                                class="icon-size-5 cursor-pointer"
+                                (click)="picker.open()"
+                                >calendar_today</mat-icon
+                            >
+                            <mat-datepicker #picker></mat-datepicker>
+                        </mat-form-field>
+                    </div>
+
+                    <!-- Brand -->
+                    <div class="flex items-center justify-between py-3">
+                        <div class="text-secondary field-label">Brand</div>
+                        <mat-form-field appearance="fill" class="w-1/2">
+                            <input
+                                matInput
+                                [formControlName]="'brand'"
+                                placeholder="Brand"
+                                required
+                            />
+                            <mat-icon
+                                matPrefix
+                                class="icon-size-5"
+                                svgIcon="mat_solid:help"
+                            ></mat-icon>
+                        </mat-form-field>
+                    </div>
+
+                    <!-- Model -->
+                    <div class="flex items-center justify-between py-3">
+                        <div class="text-secondary field-label">Model</div>
+                        <mat-form-field appearance="fill" class="w-1/2">
+                            <input
+                                matInput
+                                [formControlName]="'model'"
+                                placeholder="Model"
+                                required
+                            />
+                            <mat-icon
+                                matPrefix
+                                class="icon-size-5"
+                                svgIcon="mat_solid:help"
+                            ></mat-icon>
+                        </mat-form-field>
+                    </div>
+
+                    <!-- Peripheral Type -->
+                    <div class="flex items-center justify-between py-3">
+                        <div class="text-secondary field-label">
+                            PC Type
+                        </div>
+                        <mat-form-field appearance="fill" class="w-1/2">
+                            <input
+                                matInput
+                                [formControlName]="'pc_type'"
+                                placeholder="PC Type"
+                                required
+                            />
+                            <mat-icon
+                                matPrefix
+                                class="icon-size-5"
+                                svgIcon="mat_solid:laptop"
+                            ></mat-icon>
+                        </mat-form-field>
+                    </div>
+
+                    <!-- Size -->
+                    <div class="flex items-center justify-between py-3">
+                        <div class="text-secondary field-label">RAM</div>
+                        <mat-form-field appearance="fill" class="w-1/2">
+                            <input
+                                matInput
+                                [formControlName]="'ram'"
+                                placeholder="ram"
+                                required
+                            />
+                            <mat-icon
+                                matPrefix
+                                class="icon-size-5"
+                                svgIcon="mat_solid:help"
+                            ></mat-icon>
+                        </mat-form-field>
+                    </div>
+
+                    <!-- Color -->
+                    <div class="flex items-center justify-between py-3">
+                        <div class="text-secondary field-label">Storage Capacity</div>
+                        <mat-form-field appearance="fill" class="w-1/2">
+                            <input
+                                matInput
+                                [formControlName]="'storage_capacity'"
+                                placeholder="Storage Capacity"
+                                required
+                            />
+                            <mat-icon
+                                matPrefix
+                                class="icon-size-5"
+                                svgIcon="mat_solid:help"
+                            ></mat-icon>
+                        </mat-form-field>
+                    </div>
+
+                    <!-- Serial Number -->
+                    <div class="flex items-center justify-between py-3">
+                        <div class="text-secondary field-label">
+                            Storage Type
+                        </div>
+                        <mat-form-field appearance="fill" class="w-1/2">
+                            <input
+                                matInput
+                                [formControlName]="'storage_type'"
+                                placeholder="Storage Type"
+                                required
+                            />
+                            <mat-icon
+                                matPrefix
+                                class="icon-size-5"
+                                svgIcon="mat_solid:help"
+                            ></mat-icon>
+                        </mat-form-field>
+                    </div>
+                    
+                    <div class="flex items-center justify-between py-3">
+                        <div class="text-secondary field-label">
+                            Operating System
+                        </div>
+                        <mat-form-field appearance="fill" class="w-1/2">
+                            <input
+                                matInput
+                                [formControlName]="'operating_system'"
+                                placeholder="Operating System"
+                                required
+                            />
+                            <mat-icon
+                                matPrefix
+                                class="icon-size-5"
+                                svgIcon="mat_solid:help"
+                            ></mat-icon>
+                        </mat-form-field>
+                    </div>
+
+                    <div class="flex items-center justify-between py-3">
+                        <div class="text-secondary field-label">
+                            Graphics
+                        </div>
+                        <mat-form-field appearance="fill" class="w-1/2">
+                            <input
+                                matInput
+                                [formControlName]="'graphics'"
+                                placeholder="Graphics"
+                                required
+                            />
+                            <mat-icon
+                                matPrefix
+                                class="icon-size-5"
+                                svgIcon="mat_solid:help"
+                            ></mat-icon>
+                        </mat-form-field>
+                    </div>
+
+                    <div class="flex items-center justify-between py-3">
+                        <div class="text-secondary field-label">
+                            Size
+                        </div>
+                        <mat-form-field appearance="fill" class="w-1/2">
+                            <input
+                                matInput
+                                [formControlName]="'size'"
+                                placeholder="Size"
+                                required
+                            />
+                            <mat-icon
+                                matPrefix
+                                class="icon-size-5"
+                                svgIcon="mat_solid:help"
+                            ></mat-icon>
+                        </mat-form-field>
+                    </div>
+
+                    <div class="flex items-center justify-between py-3">
+                        <div class="text-secondary field-label">
+                            Color
+                        </div>
+                        <mat-form-field appearance="fill" class="w-1/2">
+                            <input
+                                matInput
+                                [formControlName]="'color'"
+                                placeholder="Color"
+                                required
+                            />
+                            <mat-icon
+                                matPrefix
+                                class="icon-size-5"
+                                svgIcon="mat_solid:help"
+                            ></mat-icon>
+                        </mat-form-field>
+                    </div>
+
+                    <div class="flex items-center justify-between py-3">
+                        <div class="text-secondary field-label">
+                            Serial Number
+                        </div>
+                        <mat-form-field appearance="fill" class="w-1/2">
+                            <input
+                                matInput
+                                [formControlName]="'serial_no'"
+                                placeholder="Serial Number"
+                                required
+                            />
+                            <mat-icon
+                                matPrefix
+                                class="icon-size-5"
+                                svgIcon="mat_solid:tag"
+                            ></mat-icon>
+                        </mat-form-field>
+                    </div>
+
+                    <!-- Status -->
+                    <div class="flex items-center justify-between py-3">
+                        <div class="text-secondary field-label">Status</div>
+                        <span
+                            class="inline-flex items-center rounded-md bg-green-50 px-5 py-1.5 font-medium text-green-700 ring-1 ring-inset ring-green-600/20"
+                        >
+                            {{ editData.status }}
+                        </span>
+                    </div>
+
+                    <!-- Assigned To -->
+                    <div class="flex items-center justify-between py-3">
+                        <div class="text-secondary field-label">
+                            Currently Assigned To
+                        </div>
+                        <div>{{ editData.assigned }}</div>
+                    </div>
+                    <!-- History -->
+                    <div class="flex items-center justify-between mt-8">
+                        <div class="text-lg font-medium">History</div>
+                    </div>
+                    <div class="flex mt-2 border-t">
+                        <div class="py-3">
+                            <ng-container>
+                                <div>{{ editData.history }}</div>
+                            </ng-container>
+                        </div>
+                    </div>
+                    <!-- Description -->
+                    <div class="flex items-center justify-between mt-8">
+                        <div class="text-lg font-medium">Description</div>
+                    </div>
+                    <div class="flex mt-2 border-t">
+                        <div class="py-3">
+                            <ng-container>
+                                <div>{{ editData.li_description }}</div>
+                            </ng-container>
+                        </div>
+                    </div>
+
+                    <!-- Confirm Action Button -->
+
+                    <div class="w-1/2">
+                        <button
+                            type="submit"
+                            [disabled]="myForm.invalid"
+                            class="w-full my-6"
+                            mat-flat-button
+                            color="primary"
+                        >
+                            Confirm
+                        </button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </mat-sidenav>
+
     <mat-sidenav-content>
         <ng-content></ng-content>
     </mat-sidenav-content>
