added sidepanel for card

--- a/src/app/modules/admin/assets/cards/pc/modal-create-pc-card/modal-create-pc-card.component.html
+++ b/src/app/modules/admin/assets/cards/pc/modal-create-pc-card/modal-create-pc-card.component.html
@@ -12,7 +12,7 @@
             #horizontalStepperStep1
         >
             <ng-template matStepLabel>Basic information</ng-template>
-            <p class="my-6 font-medium">Fill in Employee Basic Information</p>
+            <p class="my-6 font-medium">Fill in Emplosssyee Basic Information</p>
             <div class="flex">
                 <mat-form-field class="flex-auto">
                     <input
