--- a/src/app/modules/admin/assets/details/pc/pc-modal-create/pc-modal-create.component.html
+++ b/src/app/modules/admin/assets/details/pc/pc-modal-create/pc-modal-create.component.html
@@ -12,7 +12,7 @@
             #horizontalStepperStep1
         >
             <ng-template matStepLabel>Basic information</ng-template>
-            <p class="my-6 font-medium">Fill in Employee Basic Information</p>
+            <p class="my-6 font-medium">Fill in Empsloyee Basic Information</p>
             <div class="flex">
                 <mat-form-field class="flex-auto">
                     <input
@@ -340,28 +340,5 @@
             </div>
         </mat-step>
     </mat-horizontal-stepper>
-    <!-- <div *ngIf="errorVisible" @fadeInOut class="fixed top-5 right-5 z-50">
-        <fuse-alert [type]="'warn'">
-            <span fuseAlertTitle>Warn alert</span>
-            {{ errorMessage }}
-        </fuse-alert>
-    </div>
     
-    <div *ngIf="successVisible" @fadeInOut class="fixed top-5 right-5 z-50">
-        <fuse-alert [type]="'success'">
-            <span fuseAlertTitle>Success alert</span>
-            {{ successMessage }}
-        </fuse-alert>
-    </div> -->
-    
-    <!-- Final submit button for form -->
-    <!-- <div class="flex justify-end mt-8">
-        <button
-            mat-raised-button
-            color="primary"
-            type="submit" 
-        >
-            Submit All Information
-        </button>
-    </div> -->
 </form>
